# NailGuard

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NailGuard_Umfrage.md  README.md  _headers  app.js  datenschutz.html  desktop.html  i18n.js  impressum.html  index.html  landing.js  manifest.webmanifest  package-lock.json  package.json  robots.txt  schrift-test.html  style.css  sw.js
.github/workflows/: ambient-mac-build.yml  spike-mac-build.yml
app/: app.js  i18n.js  index.html  manifest.webmanifest  style.css  sw.js
desktop/: app.js  fps-logger.js  index.html  style.css
desktop/models/: README.md
docs/: DEPLOYMENT.md  ambient-glow-spike.md  decisions.md  design-audit.md  design-referenz.html  nailguard-design-referenz.html  pill-mode.md  product-status.md  tauri-spike.md  ux-audit.md
functions/api/: waitlist.js
spike/: analyze.py  build-frontend.sh  pill.css  pill.js  spike.js
spike/ambient/: ambient.css  build-frontend.sh  control.js  index.html  overlay.html  overlay.js
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: fetch-mediapipe-assets.sh  generate-icons.py  sync-desktop-frontend.py
