[package]
name = "nailguard-spike"
version = "0.1.0"
description = "Wegwerf-Spike: Tauri-2-Hülle für NailGuard zur Messung von Kamera + Hintergrund-Throttling."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "s"
