[package]
name = "nailguard-spike"
version = "0.1.0"
description = "Ambient-Glow-Spike: Tauri-2-Hülle mit aufnahme-ausgeschlossenem Overlay-Fenster für NailGuard."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

# macOS: direkter NSWindow-Zugriff (sharingType / collectionBehavior / level).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[profile.release]
opt-level = "s"
